--- a/examples/example.html
+++ b/examples/example.html
@@ -6,7 +6,7 @@
 	
 	<div if="fruits.length > 0">
 		
-		<p>There are <span put="fruits.length">3</span> fruits</p>
+		<p>There are <span put="fruits.length">3</span> fruits in the basket:</p>
 
 		<ul foreach="fruit" in="fruits">
 			<li put="fruit">foo</li>
